fix(QueueSortPage): prevent two-line cards from getting cut off when in the top row

--- a/src/pages/QueueSortPage.scss
+++ b/src/pages/QueueSortPage.scss
@@ -24,6 +24,7 @@
 
   .queue-list {
     display: flex;
+    padding-top: 12px;
 
     column-gap: 30px;
     flex-wrap: wrap;
